fix(filter): add active state to FilterCardGroup on mobile only

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,6 @@ h1{
 .active{
   @apply !bg-green !text-[white]
 }
+.active-mobile-only{
+  @apply max-lg:!bg-green max-lg:!text-[white]
+}
